force-app/main/default/objects/TankHistory__c/TankHistory__c.object-meta.xml
<CustomObject>
    <label>Tank History</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Tank History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tank History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>