force-app/main/default/objects/TankHistory__c/fields/Tank__c.field-meta.xml
<CustomField>
    <fullName>Tank__c</fullName>
    <label>Tank</label>
    <referenceTo>Tank__c</referenceTo>
    <relationshipLabel>Tank History</relationshipLabel>
    <relationshipName>TankHistory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>